intTests/test_type_errors/err036.log.good
Loading file "err036.saw"
Type errors:
  err036.saw:7:9-7:10: Kind mismatch: expected * -> * but found *
  err036.saw:7:17-7:18: Type mismatch.
    Mismatch of types.
    err036.saw:7:9-7:14: The type t.0 Int arises from this type annotation
    err036.saw:7:17-7:18: The type Int arises from the type of this term

    Expected: t.0 Int
    Found:    Int


FAILED
